# alma-slipsomat

./: .gitignore  .overcommit.yml  .travis.yml  LICENSE  README.md  config.cfg.dist  setup.cfg  setup.py  slipsomat.py
slipsomat/: __init__.py  shell.py  slipsomat.py  worker.py
