[bumpversion]
current_version = 0.3.1
commit = True
tag = True

[bdist_wheel]
universal = 1

[bumpversion:file:setup.py]

[bumpversion:file:slipsomat/__init__.py]

[flake8]
max-line-length = 120
doctests = True
ignore = D100,  # Missing docstring in public module
	D101,  # Missing docstring in public class
	D102,  # Missing docstring in public method
	D103,  # Missing docstring in public function
	D104,  # Missing docstring in public package
	D107   # Missing docstring in __init__

[metadata]
license_file = LICENSE
description-file = README.md

